--- a/carousel/blog.html
+++ b/carousel/blog.html
@@ -223,7 +223,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-right"><a href="#">Back</a></p>
-    <p>&copy; 2017-2020 Company, Inc</p>
+    <p>&copy; 2020 Company, Inc</p>
   </footer>
 </main>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
