--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ body {
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html">Text2Emotion</a></h1>
+      <h1 class="logo mr-auto" style="font-size:25px;"><a href="index.html">Text2Emotion</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -148,7 +148,7 @@ body {
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="https://text2emotion.herokuapp.com/" class="get-started-btn scrollto">View demo</a>
+      <a href="https://text2emotion.herokuapp.com/" class="get-started-btn scrollto">Demo</a>
 
     </div>
   </header><!-- End Header -->
